openshift.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: support-form
    name: support-form
    namespace: assistify-test
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: support-form
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: support-form
    name: support-form
    namespace: assistify-test
  spec:
    replicas: 1
    selector:
      app: support-form
      deploymentconfig: support-form
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: support-form
          deploymentconfig: support-form
      spec:
        containers:
        - image: docker-registry.default.svc:5000/assistify-test/support-form@sha256:5eaffb592654610dd09302be7ca7ff9a300100282ff0abd214488b839e9a3e35
          imagePullPolicy: Always
          name: support-form
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - support-form
        from:
          kind: ImageStreamTag
          name: support-form:latest
          namespace: assistify-test
        lastTriggeredImage: docker-registry.default.svc:5000/assistify-test/support-form@sha256:5eaffb592654610dd09302be7ca7ff9a300100282ff0abd214488b839e9a3e35
      type: ImageChange
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: support-form
    name: support-form
    namespace: assistify-test
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: support-form:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/assistify/support-form.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: DockerImage
          name: nginx
      type: Docker
    successfulBuildsHistoryLimit: 5
    triggers:
    - type: ConfigChange
    - github:
        secret: VRbdwbPNm_hT_Yq1CI1k
      type: GitHub
    - generic:
        secret: VkrKL3UPy2XfVyj5s_ah
      type: Generic
  status:
    lastVersion: 6
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: support-form
    name: support-form
    namespace: assistify-test
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: support-form
    name: support-form
    namespace: assistify-test
  spec:
    host: support-form.assistify-test.berlin.dbcs.db.de
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: support-form
      weight: 100
    wildcardPolicy: None
